--- a/bubble/css/global_main.css
+++ b/bubble/css/global_main.css
@@ -129,7 +129,7 @@ button:disabled:hover {
    display: flex;
    flex-direction: column;
    align-items: center;
-   height: auto;
+   height: 200px;
    padding-top: 10px;
 }
 
