--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,28 @@
 header {
     margin-top:30px
 }
+
 main {
     margin-bottom:30px
 }
+
 .answer {
     background: #f2fff6 !important
 }
+
 body #survey code[class*="language-"], body #survey pre[class*="language-"] {
     font-size: 1rem;
 }
+
+.container h1 {
+    margin-bottom: 1.5rem;
+}
+
+footer {
+    height: 60px;
+    text-align: center;
+ }
+ 
+ .home-link {
+    margin-left: 10px;
+ }
